4th and 5th stage